--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     <p>{{ product.description }}</p>
     <strong>${{ product.price }}</strong>
     <div class="product-footer">
-      <a href="" class="link">View Detail</a>
+      <a routerLink="/detail/{{ product.id }}"> View Details</a>
       <a href="" class="link">Add to Cart</a>
     </div>
   </div>
