--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,7 +28,9 @@
     <li><a routerLink="/seller-auth">Seller</a></li>
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/user-auth">Login/Sign-up</a></li>
-    <li><a href="#">Cart(0)</a></li>
+    <li>
+      <a href="#">Cart({{ cartItems }})</a>
+    </li>
   </ul>
 
   } @case ('seller') {
@@ -50,7 +52,9 @@
     <li>
       <a (click)="userLogout()">Logout</a>
     </li>
-    <li><a href="#">Cart(0)</a></li>
+    <li>
+      <a routerLink="/cart-page">Cart({{ cartItems }})</a>
+    </li>
   </ul>
   } }
 </nav>
