--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -17,7 +17,9 @@
           <span>Quantity: {{ cart.quantity }}</span>
         </li>
         <li>
-          <button class="form-button">Remove From Cart</button>
+          <button class="form-button" (click)="removeFromCart(cart.id)">
+            Remove From Cart
+          </button>
         </li>
       </ul>
       }
@@ -43,6 +45,10 @@
             <h4>{{ priceSummary.total }}</h4>
           </span>
         </li>
+
+        <button (click)="checkout()" class="form-button max-width">
+          Checkout
+        </button>
       </ul>
     </div>
   </div>
